--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
 /*  your css code here. If applicable */
+body{
+	margin:0px;
+	padding:0px;
+	background:rgb(204, 204, 204)
+}
+h1,h2{
+	text-align:center;
+	font-weight:bolder;
+}
+ul{
+	margin:20px;
+	background:white;
+	border:2px solid black;
+	border-radius:6px;
+	list-style-type:none;	
+}
+li{
+	margin:10px auto;
+	padding-left:0px;
+}
+div{
+	height:600px;
+	width:80%;
+	margin:0% auto;
+	background:white;
+	border:2px solid black;
+	border-radius:6px;
+}
+video{
+	width:92%;
+	padding:20px 20px 0px 20px;
+}
+label{
+	padding-left:2%;
+	font-weight:bold;
+/* 	font-family:aria; */
+}
+audio{
+/* 	padding-left:25%; */
+	width:100%;
+}
