--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,8 @@ div{
 .player_one{
 	width:92%;
 	padding:20px 20px 0px 20px;
+	background-color:rgb(255,255,255);
+	border-radius:5px;
 }
 label{
 	padding-left:2%;
