--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ label{
 /* 	font-family:aria; */
 }
 .player_two{
-/* 	padding-left:25%; */
+	padding-left:0px;
 	width:100%;
+	background-color:rgb(255,255,255);
 }
